Feat: vote scheduler 구현 (#13)